--- a/prod-guardrail-index.html
+++ b/prod-guardrail-index.html
@@ -113,6 +113,7 @@
                 padding: 1rem;
                 gap: 1.5rem;
             }
+
         }
 
         .header {
@@ -125,6 +126,40 @@
             border-radius: var(--radius-xl);
             box-shadow: var(--shadow-md);
             border: 1px solid var(--border-color);
+        }
+
+        .powered-by-vllm {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            background: linear-gradient(135deg, #ef4444 0%, #f97316 100%);
+            color: white;
+            padding: 0.75rem 1.25rem;
+            border-radius: var(--radius-xl);
+            font-size: 0.875rem;
+            font-weight: 600;
+            box-shadow: var(--shadow-lg);
+            transition: all 0.3s ease;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
+        }
+
+        .powered-by-vllm:hover {
+            transform: translateY(-3px) scale(1.02);
+            box-shadow: var(--shadow-xl);
+            border-color: rgba(255, 255, 255, 0.4);
+        }
+
+        .vllm-logo {
+            width: 32px;
+            height: 32px;
+            object-fit: contain;
+            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+            transition: all 0.3s ease;
+        }
+
+        .powered-by-vllm:hover .vllm-logo {
+            transform: rotate(5deg) scale(1.1);
         }
 
         .header h1 {
@@ -653,6 +688,10 @@
                 <span class="enterprise-badge">RHAIIS</span>
                 <span class="guardrail-badge">Guardrails</span>
             </h1>
+            <div class="powered-by-vllm">
+                <img src="vllm.png" alt="vLLM Logo" class="vllm-logo">
+                <span>Powered by vLLM</span>
+            </div>
             <button class="theme-toggle" id="themeToggle" title="Toggle dark mode">
                 <i class="fas fa-moon"></i>
             </button>
